# standardese

./: .gitmodules  CMakeLists.txt  environment.yml
.github/recipe/: build.sh  meta.yaml  sample.h
.github/workflows/: conda.yml
hooks/: post_checkout
include/standardese/: comment.hpp  doc_entity.hpp  forward.hpp  index.hpp  linker.hpp  logger.hpp
news/: model.rst
src/: CMakeLists.txt  comment.cpp  doc_entity.cpp  index.cpp  linker.cpp  logger.cpp
src/comment/: config.cpp  doc_comment.cpp  parser.cpp
src/comment/command-extension/: command_extension.cpp  command_extension.hpp
src/comment/ignore-html-extension/: ignore_html_extension.hpp
src/comment/verbatim-extension/: verbatim_extension.hpp
src/document_builder/: entity_document_builder.cpp  index_document_builder.cpp
src/formatter/: code_formatter.cpp  inja_formatter.add_callback.cpp  inja_formatter.arguments.cpp  inja_formatter.build.cpp  inja_formatter.code.cpp  inja_formatter.code_escape.cpp  inja_formatter.const_qualification.cpp  inja_formatter.cpp  inja_formatter.cppast_kind.cpp  inja_formatter.declaration_specifiers.cpp  inja_formatter.entity.cpp  inja_formatter.filename.cpp  inja_formatter.format.cpp  inja_formatter.impl.hpp  inja_formatter.join.cpp  inja_formatter.json.cpp  inja_formatter.kind.cpp  inja_formatter.md.cpp  inja_formatter.md_escape.cpp  inja_formatter.name.cpp  inja_formatter.option.cpp  inja_formatter.parameters.cpp  inja_formatter.path.cpp  inja_formatter.ref_qualification.cpp  inja_formatter.reject.cpp  inja_formatter.replace.cpp  inja_formatter.return_type.cpp  inja_formatter.sanitize_basename.cpp  inja_formatter.synopsis.cpp  inja_formatter.target.cpp  inja_formatter.text.cpp  inja_formatter.to_string.cpp  inja_formatter.type.cpp  inja_formatter.variable_type.cpp  inja_formatter.volatile_qualification.cpp  synopsis_formatter.cpp
src/inventory/: cppast_inventory.cpp  files.cpp  inventory.cpp  symbols.cpp
src/inventory/sphinx/: documentation_set.cpp  entry.cpp
src/model/: link_target.cpp  unordered_entities.cpp
src/model/visitor/: recursive_visitor.cpp
src/output/markup/: block.cpp  block_quote.cpp  brief_section.cpp  code.cpp  code_block.cpp  description.cpp  details_section.cpp  document_entity.cpp  documentation_entity.cpp  documentation_header.cpp  documentation_link.cpp  emphasis.cpp  entity_documentation.cpp  entity_index.cpp  entity_index_item.cpp  entity_kind.cpp  external_link.cpp  file_documentation.cpp  file_index.cpp  hard_break.cpp  heading.cpp  inline_section.cpp  link_base.cpp  list_item.cpp  list_section.cpp  main_document.cpp  module_documentation.cpp  module_index.cpp  namespace_documentation.cpp  ordered_list.cpp  paragraph.cpp  soft_break.cpp  strong_emphasis.cpp  subdocument.cpp  subheading.cpp  term.cpp  text.cpp  thematic_break.cpp  unordered_list.cpp  verbatim.cpp
src/output_generator/: cmark_generator.cpp
src/output_generator/html/: html_generator.cpp
src/output_generator/markdown/: markdown_generator.cpp
src/output_generator/markup/: description_item.cpp  html.cpp  markdown.cpp  xml.cpp
src/output_generator/sphinx/: inventory_generator.cpp
src/output_generator/text/: text_generator.cpp
src/output_generator/xml/: xml_generator.cpp
src/parser/: comment_collector.cpp  comment_parser.cpp  comment_parser_options.cpp  cpp_context.cpp  cppast_parser.cpp  markdown_parser.cpp
src/parser/cmark-extension/: cmark_extension.cpp  cmark_extension.hpp
src/parser/command-extension/: command_extension.cpp  command_extension.hpp  user_data.cpp  user_data.hpp
src/parser/ignore-html-extension/: ignore_html_extension.cpp  ignore_html_extension.hpp
src/parser/verbatim-extension/: verbatim_extension.cpp  verbatim_extension.hpp
src/threading/: pool.cpp  threaded_pool.cpp  unthreaded_pool.cpp
src/tool/: document_builders.cpp  options.cpp  output_generators.cpp  parsers.cpp  transformations.cpp
src/transformation/: anchor_transformation.cpp  entity_heading_transformation.cpp  exclude_uncommented_transformation.cpp  group_transformation.cpp  group_uncommented_transformation.cpp  link_external_legacy_transformation.cpp  link_href_internal_transformation.cpp  link_href_sphinx_transformation.cpp  link_sphinx_transformation.cpp  link_target_external_transformation.cpp  link_target_internal_transformation.cpp  link_target_unresolved_transformation.cpp  link_text_transformation.cpp  output_group_transformation.cpp  synopsis_transformation.cpp  transformation.cpp
standardese/: forward.hpp  logger.hpp
standardese/document_builder/: entity_document_builder.hpp  index_document_builder.hpp
standardese/formatter/: code_formatter.hpp  inja_formatter.hpp  synopsis_formatter.hpp
standardese/inventory/: cppast_inventory.hpp  files.hpp  (+2 more)
test/: CMakeLists.txt  comment.cpp  doc_entity.cpp  documentation.cpp  index.cpp  linker.cpp  synopsis.cpp  test.cpp
test/comment/: parser.cpp  parser.cpp.orig
test/document_builder/: entity_document_builder.cpp  index_document_builder.cpp
test/formatter/: code_formatter.cpp  inja_formatter.cpp
test/inventory/: cppast_inventory.cpp
test/inventory/sphinx/: documentation_set.cpp
test/model/: documentation.cpp
test/model/document/: entity_document.cpp  index_document.cpp
test/model/markup/: block_quote.cpp  code_block.cpp  heading.cpp  link.cpp  list.cpp  paragraph.cpp  phrasing.cpp  thematic_break.cpp
test/model/visitor/: visit.cpp
test/output/markup/: block_quote.cpp  code_block.cpp  document.cpp  documentation.cpp  heading.cpp  index.cpp  link.cpp  list.cpp  paragraph.cpp  phrasing.cpp  thematic_break.cpp
test/parser/: comment_parser.cpp
test/tool/: options.cpp  parsers.cpp
test/transformation/: entity_heading_transformation.cpp  link_external_legacy_transformation.cpp  link_target_external_transformation.cpp  link_target_internal_transformation.cpp  link_text_transformation.cpp
test/util/: cpp_file.cpp  cpp_file.hpp  logger.cpp  logger.hpp  parsed_comments.cpp  parsed_comments.hpp  unindent.cpp
test/util/assertions/: sections.cpp
tool/: CMakeLists.txt  generator.cpp  generator.hpp  main.cpp
(+151 files in other folders)
